@@ -1,5 +1,7 @@
 package com.sbs.qnaService.boundedContext.answer.controller;
 
+import com.sbs.qnaService.boundedContext.answer.entity.Answer;
+import com.sbs.qnaService.boundedContext.answer.service.AnswerService;
 import com.sbs.qnaService.boundedContext.question.entity.Question;
 import com.sbs.qnaService.boundedContext.question.service.QuestionService;
 import lombok.RequiredArgsConstructor;
@@ -14,6 +16,7 @@ import org.springframework.web.bind.annotation.RequestParam;
 @RequiredArgsConstructor
 @RequestMapping("/answer")
 public class AnswerController {
+  private final AnswerService answerService;
   private final QuestionService questionService;
 
   @PostMapping("/create/{id}")
@@ -22,6 +25,8 @@ public class AnswerController {
     Question question = questionService.getQuestion(id);
 
     // TODO: 답변을 저장한다.
-    return String.format("redirect:/question/detail/%s", id);
+    Answer answer = answerService.create(question, content);
+
+    return "redirect:/question/detail/%s".formatted(id);
   }
 }
